<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RateUsActivity">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        card_view:cardBackgroundColor="@color/rules"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="0dp"
        card_view:contentPadding="0dp">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/container_toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="3dp"
                    android:text="Privacy Policy :"
                    android:textSize="30sp" />


                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp">

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:text="@string/dash"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:layout_marginBottom="14dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/privacyPolicy1"
                            android:textSize="17sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:text="@string/dash"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:layout_marginBottom="14dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/privacyPolicy2"
                            android:textSize="17sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:text="@string/dash"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:layout_marginBottom="14dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/privacyPolicy3"
                            android:textSize="17sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:text="@string/dash"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:layout_marginBottom="14dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/privacyPolicy4"
                            android:textSize="17sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:text="@string/dash"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:layout_marginBottom="14dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/privacyPolicy5"
                            android:textSize="17sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:text="@string/dash"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:layout_marginBottom="14dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/privacyPolicy6"
                            android:textSize="17sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:text="@string/dash"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:layout_marginBottom="14dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/privacyPolicy7"
                            android:textSize="17sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:text="@string/dash"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:layout_marginBottom="14dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/privacyPolicy8"
                            android:textSize="17sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:text="@string/dash"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:layout_marginBottom="14dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/privacyPolicy9"
                            android:textSize="17sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:text="@string/dash"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:layout_marginBottom="14dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/privacyPolicy10"
                            android:textSize="17sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:text="@string/dash"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:layout_marginBottom="14dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/privacyPolicy11"
                            android:textSize="17sp" />
                    </TableRow>

                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:text="@string/dash"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_column="2"
                        android:layout_marginBottom="14dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/privacyPolicy12"
                        android:textSize="17sp" />
                </TableRow>
            </TableLayout>

            </LinearLayout>


        </ScrollView>

    </android.support.v7.widget.CardView>






</LinearLayout>